# GitForDiscover

./: .gitignore  00013.txt  0013.txt  0014.txt  0029-dev.txt  0113-2.txt  0113.txt  dev.txt  dev1.txt  dev2.txt  discover.txt  lxf-git.txt  master1.txt  new-dev.txt  new-test.txt  ofd-pull  ofdFile  pull-text  stash002.txt
src/: OfdSeal.cpp  OfdSeal.hpp  common.cpp  fs_action.cpp  fs_archive.cpp  fs_bookmark.cpp  fs_file.cpp  fs_file.h  fs_iconprovider.cpp  fs_iconprovider.h  fs_license.cpp  fs_log.cpp  fs_pause.h  fs_pdfdoc.cpp  fs_pdfobject.cpp  fs_pdfpage.cpp  fs_readingbookmark.cpp  fs_render.cpp  fs_search.cpp  fs_signature.cpp  fs_util.cpp  fs_util.h  fxcore.h  stdafx.cpp
src/annotation/: fpdf_richtext.cpp  fpdf_richtext.h  fs_annot.cpp  fs_annot_imp.cpp  fs_annot_imp.h  fs_annot_util.cpp  fs_annot_util.h  fs_annoticonprovider.cpp  fs_annoticonprovider.h  fs_caret_imp.cpp  fs_circle_imp.cpp  fs_fileattachment.cpp  fs_freetext_imp.cpp  fs_ink_imp.cpp  fs_line_imp.cpp  fs_link_imp.cpp  fs_markup_imp.cpp  fs_note_imp.cpp  fs_polygon_imp.cpp  fs_polyline_imp.cpp  fs_popup_imp.cpp  fs_square_imp.cpp  fs_stamp_imp.cpp  fs_textmarkup_imp.cpp
src/form/: fpdf_annothandler.h  fpdf_ltwidgethandler.cpp  fpdf_ltwidgethandler.h  fpdf_stactionhandler.cpp  fpdf_stactionhandler.h  fpdf_stinterform.cpp  fpdf_stinterform.h  fs_formfillerImp.cpp  fs_formfillerImp.h  fs_pdfform.cpp  fs_pdfformImp.h
src/form/formfiller/: ffl_button.cpp  ffl_button.h  ffl_checkbox.cpp  ffl_checkbox.h  ffl_combobox.cpp  ffl_combobox.h  ffl_listbox.cpp  ffl_listbox.h  ffl_pushbutton.cpp  ffl_pushbutton.h  ffl_radiobutton.cpp  ffl_radiobutton.h  ffl_textfield.cpp  ffl_textfield.h  ffl_updatefield.cpp  ffl_widget.cpp  ffl_widget.h
src/form/javascript/: annotation.h  app.h  bookmark.h  collab.h  color.h  console.h  consts.h  cursor.h  data.h  dataBase.h  document.h  event.h  fdf.h  field.h  fullscreen.h  global.h  icon.h  identity.h  japp.cpp  jcollab.cpp  jcolor.cpp  jconsole.cpp  jconsts.cpp  jdata.cpp  jdocument.cpp  jevent.cpp  jfdf.cpp  jfield.cpp  jfullscreen.cpp  jglobal.cpp  jicon.cpp  jidentity.cpp  jjs_context.cpp  jjs_eventhandler.cpp  jjs_globaldata.cpp  jjs_module.cpp  jjs_object.cpp  jjs_runtime.cpp  jjs_value.cpp  jlink.cpp  (+25 more)
src/inc/: commonImp.h  fpdf_define.h  fs_actionImp.h  fs_archiveImp.h  fs_bookmarkImp.h  fs_license.h  fs_log.h  fs_pdfdocImp.h  fs_pdfpageImp.h  fs_pdftextImp.h  fs_precompilers.h  fs_readingbookmarkImp.h  fs_renderImp.h  fs_signatureImp.h
src/objective-c/: iosrdkswig.i  iosrdkswig.sh  iosrdkswig_proxy.h  iosrdkswig_proxy.mm  iosrdkswig_wrap.h  iosrdkswig_wrap.mm  readme.txt  replace_string.py
src/ofd/: fr_define.h  fr_include.h  fr_ofdactionImp.cpp  fr_ofdactionImp.h  fr_ofddocImp.cpp  fr_ofddocImp.h  fr_ofdfontmapper.cpp  fr_ofdfontmapper.h  fr_ofdoutlineImp.cpp  fr_ofdoutlineImp.h  fr_ofdpageImp.cpp  fr_ofdpageImp.h  fr_ofdrenderImp.cpp  fr_ofdrenderImp.h  fr_ofdsearchImp.cpp  fr_ofdsearchImp.h  fr_ofdsignatureImp.cpp  fr_ofdsignatureImp.h  fr_ofdsignaturehandler.cpp  fr_ofdsignaturehandler.h  fr_ofdutil.cpp  fr_ofdutil.h  fs_ofdlicensemanager.cpp  fs_ofdlicensemanager.h  oes_sign.cpp  oes_sign.h  renderwrapper.cpp  renderwrapper.h
src/ofd/annotation/: fr_ofdannotImp.cpp  fr_ofdannotImp.h  fr_ofdannot_util.h  (+6 more)
src/ofd/htfoxit_oes/: CMakeLists.txt
src/ofd/htfoxit_oes/External_ASN1/: htfoxitSign.asn1
src/ofd/htfoxit_oes/External_ASN1/include/: ExtData.h  ExtensionDatas.h  INTEGER.h  SES_ESPictureInfo.h  SES_ESPropertyInfo.h  SES_Header.h  SES_SealInfo.h  SES_SignInfo.h  SES_Signature.h  SESeal.h  TBS_Sign.h  asn_codecs.h  asn_internal.h  asn_system.h  per_support.h  xer_decoder.h
src/ofd/htfoxit_oes/External_ASN1/src/: BOOLEAN.c  ExtData.c  ExtensionDatas.c  GeneralizedTime.c  INTEGER.c  NativeInteger.c  OBJECT_IDENTIFIER.c  OCTET_STRING.c  SES_ESPictureInfo.c  SES_ESPropertyInfo.c  SES_Header.c  SES_SealInfo.c  SES_SignInfo.c  SES_Signature.c  SESeal.c  TBS_Sign.c  UTF8String.c  asn_codecs_prim.c  ber_decoder.c  constr_SEQUENCE.c  constr_SET.c  constr_SET_OF.c  per_decoder.c  per_encoder.c  per_opentype.c  per_support.c  xer_decoder.c
src/ofd/htfoxit_oes/OES_Base_Lib/: OES_Base_Lib.pro
src/ofd/htfoxit_oes/OES_Base_Lib/include/: oes_base_lib.h  ofd_DigitalSignHandler.h  ofd_DigitalVerifyHandler.h  ofd_Internalhandler.h  ofd_basehandler.h  ofd_define.h  ofd_sign.h  ofd_signEx.h  ofd_signhandler.h  ofd_utils.h  ofd_verifyhandler.h  openssl_compat_layer.h  stdafx.h
src/ofd/htfoxit_oes/OES_Base_Lib/src/: oes_base_lib.cpp  ofd_DigitalSignHandler.cpp  ofd_DigitalVerifyHandler.cpp  ofd_Internalhandler.cpp  ofd_basehandler.cpp  ofd_signEx.cpp  ofd_signhandler.cpp  ofd_utils.cpp  ofd_verifyhandler.cpp  openssl_compat_layer.cpp  stdafx.cpp
src/ofd/htfoxit_oes/OES_DLL/: OES_DLL.pro
src/ofd/htfoxit_oes/OES_DLL/include/: OES_DLL_global.h  OES_LibraryManage.h  oes.h  oes_dll.h  oes_error.h
src/ofd/htfoxit_oes/OES_DLL/src/: OES_LibraryManage.cpp  oes.cpp  oes_error.cpp
src/watermark/: fs_watermark.cpp  fs_wminfo.cpp  fs_wmtext.cpp
src/widget/: fpdf_widget_pwl.cpp  fpwl_checkbox.cpp  fpwl_checkbox.h  fpwl_combobox.cpp  fpwl_combobox.h  fpwl_edit.cpp  fpwl_edit.h  fpwl_fontmap.cpp  fpwl_fontmap.h  fpwl_image.cpp  fpwl_image.h  fpwl_label.cpp  fpwl_label.h  fpwl_listbox.cpp  fpwl_listbox.h  fpwl_pushbutton.cpp  fpwl_pushbutton.h  fpwl_radiobutton.cpp  fpwl_radiobutton.h  fpwl_signature.cpp  fpwl_signature.h  fpwl_widget.cpp  fpwl_widget.h  ifpdf_widget.h
(+235 files in other folders)
